@@ -14,6 +14,8 @@
  		<file>images/paste.png</file>
 		<file>images/next.png</file>
 		<file>images/previous.png</file>	
+ 		<file>images/undo.png</file>
+		<file>images/redo.png</file>	
  		<file>images/basic256.ico</file>
 	</qresource>
 </RCC>
